renamed record-manager to ga

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Record Manager</title>
+    <title>GA</title>
     <base href="/" />
     <!-- commented below meta tag to prevent the mobile view rendering -->
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
